<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/liked_list"
        android:icon="@drawable/ic_liked_list"
        android:title="list"
        app:showAsAction="always"
        />
</menu>