<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/liked"
        app:showAsAction="always"/>
</menu>